
Package: PSCBS
==============

Version: 0.39.3 [2013-11-05]
o Added a basic implementation of setSegments() for AbstractCBS.


Version: 0.39.2 [2013-10-28]
o Now plotTracksManyChromosomes() for PairedPSCBS also supports
  tracks "c1,c2", "c1" and "c2".


Version: 0.39.1 [2013-10-25]
o Now plotTracksManyChromosomes() uses the locus data field 'rho'
  when plotting DH locus-level data.  It only recalculates it from
  the tumor BAFs if the DH signals are not available - if so a
  warning is generated.
o BUG FIX: The 'rho' signals returned by getLocusData(..., fields="full")
  for PairedPSCBS would have values also for homozygote SNPs.



Version: 0.39.0 [2013-10-23]
o Now all warnings generated by DNAcopy::CNA() are suppressed,
  including the common one on "array has repeated maploc positions".
o Added getBootstrapLocusSets() for PairedPSCBS.  Added a package
  system test for it.
o Added argument 'subset' to applyByRegion() for PairedPSCBS.
o Added clearBootstrapSummaries() for PairedPSCBS.
o SPEEDUP: Added argument 'cache' to bootstrapSegmentsAndChangepoints(),
  which caches the results to file if cache=TRUE.


Version: 0.38.6 [2013-10-20]
o Internal restructuring on how bootstrapping of segment means is done.
o BUG FIX: plotTracks() for PairedPSCBS would use argument 'Clim'
  for 'Blim' as well, regardless of what argument 'Blim' is.  This
  bug was introduced in v0.38.3.


Version: 0.38.5 [2013-10-18]
o BUG FIX: The CBS and Paired PSCBS report templates assumed that
  the 'R.utils' package is attached.


Version: 0.38.4 [2013-10-15]
o CLEANUP: Removed a few unnecessary NAMESPACE imports.
o Bumped up package dependencies.


Version: 0.38.3 [2013-10-14]
o Now plotTracks() for CBS and PSCBS gives a more informative error if
  'Clim' or 'Blim' is invalid.  If using "auto" (only for CBS) and the
  limits could not be inferred due to an unknown or unset signal type,
  an informative error message reports on this as well.