@@ -60,7 +60,7 @@
  pointsC1C2
  pointsC1C2.PairedPSCBS pointsDeltaC1C2 pointsDeltaC1C2.PairedPSCBS
  postsegmentTCN postsegmentTCN.PairedPSCBS print.AbstractCBS
- sampleName sampleName<- setLocusData setLocusData.AbstractCBS
+ sampleName sampleName<- setLocusData
  setSampleName setSegments signalType
  signalType.CBS signalType<- signalType<-.CBS subset.CBS
  tileChromosomes tileChromosomes.AbstractCBS tileChromosomes.CBS
