@@ -3,7 +3,8 @@ Package: PSCBS
 ==============
 
 Version: 0.39.3 [2013-11-05]
-o Added a basic implementation of setSegments() for AbstractCBS.
+o Added basic implementations of setLocusData() and setSegments()
+  for AbstractCBS.
 
 
 Version: 0.39.2 [2013-10-28]
